--- a/yp.html
+++ b/yp.html
@@ -8,7 +8,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="C:\Users\KIIT\OneDrive\Desktop\WEB DEV\images\dp-modified.png" alt="Image of yash">
+                    <img src="dp-modified.png" alt="Image of yash">
         
                 </td>
                 <td>
