--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <td>
                     <table cellspacing="10">
                         <tr>
-                            <td>DSA ⭐⭐⭐</td>
+                            <td>DSA ⭐⭐⭐⭐</td>
                         </tr>
                         <tr>
                             <td>Web Dev ⭐⭐</td>
